crates/kirin-derive-dialect/src/field/snapshots/kirin_derive_dialect__field__tests__enum_named.snap
---
source: crates/kirin-derive-dialect/src/field/tests.rs
expression: "case!\n{\n    #[kirin(type = CFlowType)] pub enum ControlFlowInstruction\n    {\n        Branch { target: Block, }, ConditionalBranch\n        { condition: SSAValue, true_target: Block, false_target: Block, },\n        Return(SSAValue),\n    }\n}"
---
#[automatically_derived]
impl<'a> kirin::ir::HasArguments<'a> for ControlFlowInstruction {
    type Iter = ControlFlowInstructionArgumentsIter<'a>;
    fn arguments(&'a self) -> Self::Iter {
        match self {
            Self::Branch { target } => {
                ControlFlowInstructionArgumentsIter::Branch(std::iter::empty::<
                    &'a kirin::ir::SSAValue,
                >())
            }
            Self::ConditionalBranch {
                condition,
                true_target,
                false_target,
            } => ControlFlowInstructionArgumentsIter::ConditionalBranch(std::iter::once(condition)),
            Self::Return(field_0) => {
                ControlFlowInstructionArgumentsIter::Return(std::iter::once(field_0))
            }
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub enum ControlFlowInstructionArgumentsIter<'a> {
    Branch(std::iter::Empty<&'a kirin::ir::SSAValue>),
    ConditionalBranch(std::iter::Once<&'a kirin::ir::SSAValue>),
    Return(std::iter::Once<&'a kirin::ir::SSAValue>),
}
#[automatically_derived]
impl<'a> Iterator for ControlFlowInstructionArgumentsIter<'a> {
    type Item = &'a kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            Self::Branch(inner) => inner.next(),
            Self::ConditionalBranch(inner) => inner.next(),
            Self::Return(inner) => inner.next(),
        }
    }
}
#[automatically_derived]
impl<'a> kirin::ir::HasArgumentsMut<'a> for ControlFlowInstruction {
    type IterMut = ControlFlowInstructionArgumentsMutIter<'a>;
    fn arguments_mut(&'a mut self) -> Self::IterMut {
        match self {
            Self::Branch { target } => {
                ControlFlowInstructionArgumentsMutIter::Branch(std::iter::empty::<
                    &'a mut kirin::ir::SSAValue,
                >())
            }
            Self::ConditionalBranch {
                condition,
                true_target,
                false_target,
            } => ControlFlowInstructionArgumentsMutIter::ConditionalBranch(std::iter::once(
                condition,
            )),
            Self::Return(field_0) => {
                ControlFlowInstructionArgumentsMutIter::Return(std::iter::once(field_0))
            }
        }
    }
}
#[automatically_derived]
#[doc(hidden)]
pub enum ControlFlowInstructionArgumentsMutIter<'a> {
    Branch(std::iter::Empty<&'a mut kirin::ir::SSAValue>),
    ConditionalBranch(std::iter::Once<&'a mut kirin::ir::SSAValue>),
    Return(std::iter::Once<&'a mut kirin::ir::SSAValue>),
}
#[automatically_derived]
impl<'a> Iterator for ControlFlowInstructionArgumentsMutIter<'a> {
    type Item = &'a mut kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            Self::Branch(inner) => inner.next(),
            Self::ConditionalBranch(inner) => inner.next(),
            Self::Return(inner) => inner.next(),
        }
    }
}
