crates/kirin-derive-dialect/src/field/snapshots/kirin_derive_dialect__field__tests__enum_wraps.snap
---
source: crates/kirin-derive-dialect/src/field/tests.rs
expression: "case!\n{\n    #[wraps] #[kirin(fn, type = T)] pub enum StructuredControlFlow<T:\n    TypeLattice> { If(If<T>), For(For<T>), }\n}"
---
#[automatically_derived]
impl<'a, T: TypeLattice> kirin::ir::HasArguments<'a> for StructuredControlFlow<T> {
    type Iter = StructuredControlFlowArgumentsIter<'a, T>;
    fn arguments(&'a self) -> Self::Iter {
        match self {
            Self::If(field_0) => StructuredControlFlowArgumentsIter::If(
                <If<T> as kirin::ir::HasArguments>::arguments(field_0),
            ),
            Self::For(field_0) => StructuredControlFlowArgumentsIter::For(
                <For<T> as kirin::ir::HasArguments>::arguments(field_0),
            ),
        }
    }
}
#[automatically_derived]
pub enum StructuredControlFlowArgumentsIter<'a, T: TypeLattice> {
    If(<If<T> as kirin::ir::HasArguments<'a>>::Iter),
    For(<For<T> as kirin::ir::HasArguments<'a>>::Iter),
}
#[automatically_derived]
impl<'a, T: TypeLattice> Iterator for StructuredControlFlowArgumentsIter<'a, T> {
    type Item = &'a kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            Self::If(inner) => inner.next(),
            Self::For(inner) => inner.next(),
        }
    }
}
#[automatically_derived]
impl<'a, T: TypeLattice> kirin::ir::HasArgumentsMut<'a> for StructuredControlFlow<T> {
    type IterMut = StructuredControlFlowArgumentsMutIter<'a, T>;
    fn arguments_mut(&'a mut self) -> Self::IterMut {
        match self {
            Self::If(field_0) => StructuredControlFlowArgumentsMutIter::If(
                <If<T> as kirin::ir::HasArgumentsMut>::arguments_mut(field_0),
            ),
            Self::For(field_0) => StructuredControlFlowArgumentsMutIter::For(
                <For<T> as kirin::ir::HasArgumentsMut>::arguments_mut(field_0),
            ),
        }
    }
}
#[automatically_derived]
pub enum StructuredControlFlowArgumentsMutIter<'a, T: TypeLattice> {
    If(<If<T> as kirin::ir::HasArgumentsMut<'a>>::IterMut),
    For(<For<T> as kirin::ir::HasArgumentsMut<'a>>::IterMut),
}
#[automatically_derived]
impl<'a, T: TypeLattice> Iterator for StructuredControlFlowArgumentsMutIter<'a, T> {
    type Item = &'a mut kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            Self::If(inner) => inner.next(),
            Self::For(inner) => inner.next(),
        }
    }
}
